--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,11 +8,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      # 1. 拉取代码
+      # 1. 检出代码
       - name: 🔄 检出代码
         uses: actions/checkout@v3
 
-      # 2. 安装 Python 和必要的工具
+      # 2. 设置Python环境并安装腾讯云命令行工具
       - name: 🐍 设置 Python
         uses: actions/setup-python@v4
         with:
@@ -21,30 +21,40 @@ jobs:
       - name: 📦 安装腾讯云命令行工具 (tccli)
         run: pip install tccli
 
-      # 3. 配置 tccli 认证信息（使用 GitHub Secrets）
+      # 3. 配置 tccli 认证（使用GitHub Secrets）
       - name: 🔑 配置 tccli 认证
         env:
           TENCENT_SECRET_ID: ${{ secrets.TENCENT_SECRET_ID }}
           TENCENT_SECRET_KEY: ${{ secrets.TENCENT_SECRET_KEY }}
         run: |
-          tccli configure set region ap-guangzhou  # 请替换为你的函数地域
-          tccli configure set secret-id $TENCENT_SECRET_ID
-          tccli configure set secret-key $TENCENT_SECRET_KEY
+          # 使用正确的命令行参数格式配置认证信息和地域
+          tccli configure set --region ap-guangzhou --secret-id $TENCENT_SECRET_ID --secret-key $TENCENT_SECRET_KEY --profile default
+          # 可选：显示配置，用于验证
+          echo "tccli配置完成，当前配置如下："
+          tccli configure list
 
-      # 4. 打包源代码（必须包含 sentiment_analysis.py 和 requirements.txt）
+      # 4. 将源代码打包为ZIP文件
       - name: 📁 打包源代码
         run: |
-          echo "正在打包源代码..."
-          zip -r code.zip . -x '*.git*' '*.github*' '*.DS_Store'
+          echo "正在打包源代码为ZIP文件..."
+          # 压缩当前目录，排除Git和GitHub Actions相关文件
+          zip -r code.zip . -x '*.git*' '*.github/*' '.DS_Store'
+          echo "打包完成，文件信息："
+          ls -lh code.zip
 
-      # 5. 更新云函数代码
+      # 5. 调用API更新云函数代码
       - name: ⬆️ 更新云函数代码
         run: |
-          echo "正在更新云函数 [news-sentiment] 的代码..."
-          tccli scf UpdateFunctionCode \
-            --FunctionName news-sentiment-analyzer  # 请务必改为你的函数名！
-            --ZipFile fileb://code.zip
+          echo "正在将代码包上传并更新云函数..."
+          # 请将 `YOUR_ACTUAL_FUNCTION_NAME` 替换为您的实际函数名
+          tccli scf UpdateFunctionCode --FunctionName news-sentiment-analyzer --ZipFile fileb://code.zip
+          echo "✅ 云函数代码更新指令已发送。"
 
       # 6. 输出成功信息
       - name: 🎉 部署完成
-        run: echo "✅ 代码已成功部署至腾讯云云函数！请手动检查函数URL是否正常。"
+        run: |
+          echo "========================================"
+          echo "🚀 GitHub Actions 工作流执行完毕！"
+          echo "理论上，您的代码已部署至腾讯云云函数。"
+          echo "提示：请登录腾讯云SCF控制台，确认函数代码已更新，并检查函数URL是否可以正常调用。"
+          echo "========================================"
