--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,8 @@ jobs:
         run: |
           # 正确命令：使用 set <key> <value> 格式，不要加 --
           tccli configure set region ap-guangzhou  # 请确认地域
-          tccli configure set secret.id $TENCENT_SECRET_ID
-          tccli configure set secret.key $TENCENT_SECRET_KEY
+          tccli configure set secrets.id $TENCENT_SECRET_ID
+          tccli configure set secrets.key $TENCENT_SECRET_KEY
           
           # 可选：验证配置是否成功写入
           echo "检查当前配置..."
