--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,60 +16,20 @@ jobs:
         with:
           python-version: '3.8'
 
-      - name: 📦 安装依赖 (腾讯云 SDK)
+      - name: 📦 安装腾讯云 Python SDK
         run: pip install tencentcloud-sdk-python
 
-      - name: 📁 创建部署包
+      - name: 📁 准备部署包
         run: |
-          # 创建一个干净的临时目录，只放入运行所需的文件
-          mkdir -p deploy_pkg
-          cp sentiment_analysis.py requirements.txt deploy_pkg/
-          cd deploy_pkg
-          zip -r ../function.zip ./*
-          cd ..
-          echo "部署包 function.zip 已创建，包含文件："
+          # 创建部署包，确保包含你的代码文件
+          zip -r function.zip sentiment_analysis.py requirements.txt
+          echo "部署包创建完成，内容如下："
           unzip -l function.zip
 
-      - name: ⬆️ 使用 Python SDK 更新云函数
+      - name: ⬆️ 执行部署脚本
         env:
-          # 直接从 GitHub Secrets 读取，安全且已验证有效
           TENCENT_SECRET_ID: ${{ secrets.TENCENT_SECRET_ID }}
           TENCENT_SECRET_KEY: ${{ secrets.TENCENT_SECRET_KEY }}
         run: |
-          python -c "
-import os, json, base64
-from tencentcloud.common import credential
-from tencentcloud.common.profile.client_profile import ClientProfile
-from tencentcloud.common.profile.http_profile import HttpProfile
-from tencentcloud.scf.v20180416 import scf_client, models
-
-# 1. 认证（使用环境变量）
-cred = credential.Credential(os.environ['TENCENT_SECRET_ID'], os.environ['TENCENT_SECRET_KEY'])
-
-# 2. 初始化客户端（请将 REGION 替换为你的函数地域，例如 ap-shanghai）
-REGION = 'ap-guangzhou'  # TODO: 重要！请修改为你的函数地域
-httpProfile = HttpProfile()
-httpProfile.endpoint = 'scf.tencentcloudapi.com'
-clientProfile = ClientProfile()
-clientProfile.httpProfile = httpProfile
-client = scf_client.ScfClient(cred, REGION, clientProfile)
-
-# 3. 读取并编码部署包
-with open('function.zip', 'rb') as f:
-    zip_file = base64.b64encode(f.read()).decode('utf-8')
-
-# 4. 构建更新请求
-req = models.UpdateFunctionCodeRequest()
-# TODO: 重要！请确保函数名与控制台完全一致
-req.FunctionName = 'news-sentiment-analyzer'  
-req.ZipFile = zip_file
-
-# 5. 发送请求
-try:
-    resp = client.UpdateFunctionCode(req)
-    print('🎉 函数代码更新成功！')
-    print('请求ID:', resp.RequestId)
-except Exception as e:
-    print('❌ 更新失败:', e)
-    exit(1)
-          "
+          # 运行我们创建的独立 Python 脚本
+          python deploy_function.py
